Removed Cross Origins

--- a/Magister-Slim/bin/main/application.properties
+++ b/Magister-Slim/bin/main/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.database=magisterme-slim
+spring.data.mongodb.database=magister-slim
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.repositories.enabled=true
